# cpp-bootstrap

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build-macos.command  build-windows.cmd
builder/: CMakeLists.txt  api.h.in  namespace.h.in  platform.cmake  qt.cmake  target.cmake
builder/scripts/: build-linux-make.sh  build-macos-make.command  build-macos-xcode.command  build-windows-msvc.cmd
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.h
src/templates/: CMakeLists.txt
src/templates/app/: CMakeLists.txt  app.cpp  app.h
src/templates/app/resources/: info.plist.in
src/templates/consoleapp/: CMakeLists.txt  consoleapp.cpp  consoleapp.h
src/templates/interfacelib/: CMakeLists.txt
src/templates/interfacelib/interfacelib/: interfacelib.h
src/templates/sharedlib/: CMakeLists.txt  sharedlib.cpp  sharedlib.h
src/templates/staticlib/: CMakeLists.txt  staticlib.cpp  staticlib.h
